--- a/client/index.html
+++ b/client/index.html
@@ -382,13 +382,7 @@
                         <p class="text-muted">Every order will be delivered at your place. We have contacts all over the world</p>
                     </div>
                 </div>
-                <!--<div class="col-lg-3 col-md-6 text-center">-->
-                    <!--<div class="service-box">-->
-                        <!--<i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>-->
-                        <!--<h3>Up to Date</h3>-->
-                        <!--<p class="text-muted">We update dependencies to keep things fresh.</p>-->
-                    <!--</div>-->
-                <!--</div>-->
+
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
@@ -407,24 +401,6 @@
                      ng-show="['Aquarelles','Mosaiques', 'Sculptures'].indexOf(album.name) > -1">
                     <a class="portfolio-box"  artyoni-album="{{album}}" ></a>
                 </div>
-
-                <!--<div class="col-lg-4 col-sm-6">-->
-                    <!--<a href="#" class="portfolio-box">-->
-                        <!--<img src="assets/img/portfolio/boite.jpg" class="img-responsive" alt="">-->
-                        <!--<div class="portfolio-box-caption">-->
-                            <!--<div class="portfolio-box-caption-content">-->
-                                <!--<div class="project-category text-faded">-->
-                                    <!--Jewelry Box-->
-                                <!--</div>-->
-                                <!--<div class="project-name">-->
-                                    <!--Boxes-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</a>-->
-                <!--</div>-->
-
-
             </div>
         </div>
 
@@ -435,7 +411,6 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Attractive deal for ordering through the web site!</h2>
-                <!--<a href="#" class="btn btn-default btn-xl wow tada">Order Now!</a>-->
             </div>
         </div>
     </aside>
@@ -480,8 +455,9 @@
     <script src="assets/js/jquery.js"></script>
 
     <!--Angular-->
-    <script src="bower_components/angular/angular.min.js"></script>
-    <script src="bower_components/ng-facebook/ngFacebook.js"></script>
+    <script src="assets/js/angular.min.js"></script>
+    <script src="assets/js/angular.min.js.map"></script>
+    <script src="assets/js/ngFacebook.js"></script>
 
     <!--Gallery-->
     <!--<script type="text/javascript" src="bower_components/ngGallery/src/js/ngGallery.js"></script>-->
